# social-media-os

./: .env.example  .gitattributes  .gitignore  README.md  check_db.py  cortex.json  get_chat_id.py  get_linkedin_token.py  get_linkedin_urn.py  orchestrator.py  pyproject.toml  render_rag_carousel.py  run.py  run_analyst.py  run_profile.py  run_sprint0.py  run_sprint1.py  test_carousel.py  test_carousel_telegram.py  test_image.py  test_infographic.py  test_pipeline.py
agents/: analyst.py  block_renderer.py  content.py  content_generator.py  image.py  infographic.py  information_architect.py  knowledge_curator.py  layout_agent.py  planner.py  post_writer.py  profile_writer.py  protocols.py  review.py  strategist.py  style_agent.py  svg_layout.py  template_registry.py  visual_block_generator.py
agents/adapters/: instagram_adapter.py  linkedin_adapter.py
ai/: TRACKER.md
bots/: telegram_approval.py
knowledge/: brand_voice.md  knowledge_graph.json
memory/: store.py
normalizers/: instagram.py
orchestrator/: __init__.py
publishers/: base.py  instagram.py  linkedin.py
renderers/: block_renderer.py  infographic_renderer.py  svg_layout.py
schemas/: __init__.py  content_contract.py  engagement.py  instagram.py  platform.py  reports.py  visual_block.py
services/: analytics_service.py  context_engine.py  knowledge_service.py  memory_service.py  style_service.py  template_registry.py
styles/: apple_minimal.json  light_minimal.json  linear_dark.json  modern_saas.json  technical_blueprint.json
templates/: _base.css
workflows/: linkedin_profile.py
(+24 files in other folders)
