[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-intel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "requests>=2.32.0",
    "python-telegram-bot>=21.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["schemas", "normalizers", "agents", "bots", "publishers", "memory"]
